[project]
name = "r-python-alpine"
dynamic = ["version"]
description = "Build Docker Images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.6.0",
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=4.2.0",
]


[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "semver2"
version = "0.0.5"
update_changelog_on_bump = true
major_version_zero = true
