[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r-python-alpine"
version = "0.0.4"
description = "Alpine Docker containers with R 4.6.0 and Python 3.12"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Marcio Nicolau", email = "nicolau.3g@gmail.com"}
]
keywords = ["docker", "alpine", "r", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/cnpt/containers"
Repository = "https://github.com/cnpt/containers"
Issues = "https://github.com/cnpt/containers/issues"

[project.optional-dependencies]
dev = [
    "commitizen>=4.0.0",
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=3.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=3.0.0",
]

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "v$version"
version_scheme = "semver2"
version = "0.0.10"
update_changelog_on_bump = true
major_version_zero = true

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
